@@ -1,2 +1,3 @@
 gprofLaunchConfiguration.name.0=Gprof
-
+gprofLaunchConfiguration.description=Function Execution Timing
+gprofLaunchConfiguration.information=Compile one of your C/C++ sources with the \"-pg\" option.
