@@ -25,3 +25,7 @@ launchshortcuts.label=Profile With OProfile
 
 manual.launchconfigurationtype.label=Profile With OProfile (Manual)
 manual.launchshortcuts.label=Profile With OProfile (Manual)
+
+oprofileLaunchConfiguration.name.0=Oprofile
+oprofileLaunchConfiguration.description=Hardware/Software Events Timing
+oprofileLaunchConfiguration.information=Requires root password to execute OProfile commands.
