@@ -2,3 +2,6 @@ bundleName=Perf Plug-in
 bundleProvider=Eclipse Linux Tools
 launchConfigurationTabGroup.description.0 = Profile C/C++ Application Using Perf
 launchConfigurationTabGroup.description.1 = Profile C/C++ Application Using Remote Perf
+perfLaunchConfiguration.name.0=Perf
+perfLaunchConfiguration.description=Hardware/Software Events Timing
+perfLaunchConfiguration.information=Requires perf tool to be installed.
