@@ -115,6 +115,20 @@ Invalid values will be assigned the lowest priority to the extension.
                </documentation>
             </annotation>
          </attribute>
+         <attribute name="description" type="string">
+            <annotation>
+               <documentation>
+                  Description of launch provider to be used in preferences tool tip information.
+               </documentation>
+            </annotation>
+         </attribute>
+         <attribute name="information" type="string">
+            <annotation>
+               <documentation>
+                  Additional information for launch provider to be displayed in the preferences page.
+               </documentation>
+            </annotation>
+         </attribute>
       </complexType>
    </element>
 
