@@ -4,3 +4,6 @@ Bundle-Name=Callgraph Launch
 launchConfigurationType.name.0 = Profile with SystemTap
 launchConfigurationTabGroup.description.0 = Launch a custom SystemTap Script
 launch.name=Function callgraph
+callgraphLaunchConfiguration.name.0=Callgraph
+callgraphLaunchConfiguration.description=Function Execution Timing
+callgraphLaunchConfiguration.information=Uses SystemTap language as a back-end.
