@@ -22,7 +22,9 @@
       <provider
             default="false"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%cachegrindLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.cachegrind"
+            information="%cachegrindLaunchConfiguration.information.0"
             name="%cachegrindLaunchConfiguration.name.0"
             priority="2"
             shortcut="org.eclipse.linuxtools.internal.valgrind.cachegrind.CachegrindLaunchShortcut"
