@@ -22,7 +22,9 @@
       <provider
             default="false"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%LaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.helgrind"
+            information="%LaunchConfiguration.information.0"
             name="%LaunchConfiguration.name.0"
             priority="3"
             shortcut="org.eclipse.linuxtools.internal.valgrind.helgrind.HelgrindLaunchShortcut"
