@@ -2,4 +2,6 @@
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Massif Plug-in
 editor.name.0 = Heap Chart
-massifLaunchConfiguration.name.0 = Heap Usage [Valgrind]
+massifLaunchConfiguration.name.0 = Massif
+massifLaunchConfiguration.description.0=Heap Usage
+massifLaunchConfiguration.information.0=Uses Valgrind as a back-end tool.
