@@ -22,7 +22,9 @@
       <provider
             default="true"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%memcheckLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.memcheck"
+            information="%memcheckLaunchConfiguration.information.0"
             name="%memcheckLaunchConfiguration.name.0"
             priority="1"
             shortcut="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchShortcut"
